@@ -5,6 +5,7 @@ version 0.6:
 	* qpid::proton::Message exposes the properties property.
 	* qpid::proton::Message exports the annotations property.
 	* qpid::proton::Message exposes the instructions property.
+	* Mailserver and client example apps.
 
 version 0.5:
 	* Added the qpid::proton::Data type.
